--- a/client/js/landing/landing.html
+++ b/client/js/landing/landing.html
@@ -6,9 +6,12 @@
     <div class='valign center-align desc' ng-repeat='text in LPtext.descriptions'>
       <p> {{ text }} </p>
     </div>
-        
+
     <!--<p class='valign center-align desc'>Be food-savy.</p>
     <p class='valign center-align desc'>Act fridge-friendly.</p>
     <p class='valign center-align desc'>Use <strong class='foodly'>{{fridgely}}</strong></p>-->
   </div>
+
+  <p class='center-align'><a href='/js/search/search.html'>Click To Redirect To Search Page</a></p>
+s
 </div>
