--- a/client/js/landing/landing.html
+++ b/client/js/landing/landing.html
@@ -1,7 +1,9 @@
 <!-- TESTING CODE FOR THE LANDINGPAGE -->
 <div id='container' ng-controller='LandingPageController'>
   <div class = 'jumbotron'>
-    <h1 class="valign center-align header">{{ LPtext.title }}</h1>
+  <div class="valign center-align header col s4 push-s4 pull-s4">
+     <h1 class='headerTitle'>{{ LPtext.title }}</h1>
+   </div>
 
     <div class='valign center-align desc' ng-repeat='text in LPtext.descriptions'>
       <p> {{ text }} </p>
