updated the landing page template

--- a/client/js/landing/landing.html
+++ b/client/js/landing/landing.html
@@ -1,5 +1,4 @@
-<!-- TESTING CODE FOR THE LANDINGPAGE -->
-<div id='container' ng-controller='LandingPageController'>
+<!-- <div id='container' ng-controller='LandingPageController'>
   <div class = 'jumbotron'>
     <h1 class="valign center-align header">{{ LPtext.title }}</h1>
 
@@ -7,8 +6,29 @@
       <p> {{ text }} </p>
     </div>
         
+    <p class='valign center-align desc'>Be food-savy.</p>
+    <p class='valign center-align desc'>Act fridge-friendly.</p>
+    <p class='valign center-align desc'>Use <strong class='foodly'>{{fridgely}}</strong></p>
+  </div>
+</div> -->
+
+
+<!-- TESTING CODE FOR THE LANDINGPAGE -->
+<div id='container' ng-controller='LandingPageController'>
+  <div class = 'jumbotron'>
+  <div class="valign center-align header col s4 push-s4 pull-s4">
+     <h1 class='headerTitle'>{{ LPtext.title }}</h1>
+   </div>
+
+    <div class='valign center-align desc' ng-repeat='text in LPtext.descriptions'>
+      <p> {{ text }} </p>
+    </div>
+
     <!--<p class='valign center-align desc'>Be food-savy.</p>
     <p class='valign center-align desc'>Act fridge-friendly.</p>
     <p class='valign center-align desc'>Use <strong class='foodly'>{{fridgely}}</strong></p>-->
   </div>
+
+  <p class='center-align'><a href='/js/search/search.html'>Click To Redirect To Search Page</a></p>
+s
 </div>
