(feature) updated the landing page with new banner image

--- a/client/js/landing/landing.html
+++ b/client/js/landing/landing.html
@@ -20,15 +20,13 @@
      <h1 class='headerTitle'>{{ LPtext.title }}</h1>
    </div>
 
+  <div class='LPtext'>
     <div class='valign center-align desc' ng-repeat='text in LPtext.descriptions'>
       <p> {{ text }} </p>
     </div>
-
+  </div> 
     <!--<p class='valign center-align desc'>Be food-savy.</p>
     <p class='valign center-align desc'>Act fridge-friendly.</p>
     <p class='valign center-align desc'>Use <strong class='foodly'>{{fridgely}}</strong></p>-->
   </div>
-
-  <p class='center-align'><a href='/js/search/search.html'>Click To Redirect To Search Page</a></p>
-s
 </div>
